features/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - image: lscr.io/linuxserver/jellyfin:10.11.5@sha256:313571f253bf1035809f6856bb063904456226ef3899b96e60ee4597b3477246
        name: jellyfin
        ports:
        - name: http
          containerPort: 8096
        - name: local-udp
          containerPort: 7359
          protocol: UDP
        volumeMounts:
        - name: configdir
          mountPath: /config
        - name: datadir
          subPath: jellyfin
          mountPath: /data
      volumes:
      - name: configdir
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: datadir
        persistentVolumeClaim:
          claimName: media-stack-pvc
